# myriad-cpp

./: CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  Myriad.cpp
src/Client/: MyriadClient.cpp  MyriadClient.h
src/Common/Plog/: Init.h  Log.h  Logger.h  Record.h  Util.h
src/Common/Plog/Appenders/: ColorConsoleAppender.h  ConsoleAppender.h  EventLogAppender.h  IAppender.h  RollingFileAppender.h
src/Common/Plog/Converters/: NativeEOLConverter.h  UTF8Converter.h
src/Common/Plog/Formatters/: CsvFormatter.h  FuncMessageFormatter.h  MessageOnlyFormatter.h  TxtFormatter.h
src/Common/Properties/: PropertiesUtils.cpp
src/Server/: MyriadServer.cpp  MyriadServer.h
